# bot_project

./: .flake8  main.py  pyproject.toml
app/: config.py
config/: settings.yml
src/application/: app.py  container.py
src/domains/user/: message.py  message_handlers.py
src/domains/weather/: schema.py
src/infractructure/: server.py
src/infractructure/base_entities/: singleton.py
src/infractructure/server/: server.py
src/service/: weather.py
